working with newer version of OTP and CTA data